# nlm-cuda

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  NLMConfig.json  README.md  runner.cmd
baseline/BM3D/: bm3d_demo_grayscale.m
baseline/DnCNN/: Demo_test_DnCNN.m  Demo_test_DnCNN_C.m  README.md
baseline/GaussianLowPass/: README.md
doc/: Report.docx  （212138-卓旭）《数字图像处理进展》课程报告.docx
experiment/: calc_metrics.py  crop.py
experiment/Denoised/GaussianLP/: SIGMA_OF_GAUSSIAN_LP.txt
experiment/Denoised/NLM/: C052_1-150_gaussian.raw  C052_1-150_poisson.raw  C052_1-150_snp.raw  PARAMETER.txt  lena512_gaussian.raw  lena512_poisson.raw  lena512_snp.raw  param.txt
experiment/Noisy/: lena512_gaussian.raw  lena512_snp.raw
experiment/Noisy/DIV2K_0832_gaussian/: DIV2K_0832_gaussian.raw (green).raw  DIV2K_0832_gaussian.raw (red).raw  DIV2K_0832_gaussian.raw(blue).raw
experiment/ground_truth_image/: C052_1-150.raw
experiment/noisy_image/: C052_1-150_gaussian.raw  C052_1-150_poisson.raw  C052_1-150_snp.raw  lena512_poisson.raw
misc/: ProgressBar.hpp  Utils.hpp  utils.hpp
nlm-cpu/: CMakeLists.txt  nlm-cpu.cpp
nlm-cuda/: CMakeLists.txt  nlm-cuda.cu
